added revisions and tests